# intro_stat_learning

./: .gitignore  README.md  pyproject.toml
notebooks/: C1: Introduction to the Book.ipynb  C2.3: Introduction to Python.ipynb  C2.4: Exercises Solutions.ipynb  C2.4: Exercises.ipynb  C2: Introduction to Python.ipynb  C3.6: Linear Regression Lab.ipynb  C3.7: Exercises Solutions.ipynb  C3.7: Exercises.ipynb
